@@ -300,6 +300,8 @@ def load_module_graph(graph, pool, update=None, lang=None):
         if not update:
             pool.setup()
 
+        pool.setup_mixin(modules)
+
         for model_name in models_to_update_history:
             model = pool.get(model_name)
             if model._history:
