@@ -7,8 +7,11 @@ import urllib
 
 from trytond.tests.test_tryton import activate_module, with_transaction
 from trytond.transaction import Transaction
+from trytond.model import ModelView
 from trytond.pool import Pool
 from trytond.url import HOSTNAME
+
+from .mixin import TestMixin, TestSecondMixin, NotMixin
 
 
 class UrlTestCase(unittest.TestCase):
@@ -45,9 +48,39 @@ class UrlTestCase(unittest.TestCase):
                 HOSTNAME, urllib.quote(db_name)))
 
 
+class MixinTestCase(unittest.TestCase):
+    "Test Mixin"
+
+    @classmethod
+    def setUpClass(cls):
+        activate_module('tests')
+
+    @with_transaction()
+    def test_mixin_on_modelview(self):
+        "Test all ModelView and only ModelView are subclass of TestMixin"
+        for _, model in Pool().iterobject():
+            self.assertEqual(
+                issubclass(model, ModelView),
+                issubclass(model, TestMixin))
+
+    @with_transaction()
+    def test_second_mixin_on_modelview(self):
+        "Test all ModelView and only ModelView are subclass of TestSecondMixin"
+        for _, model in Pool().iterobject():
+            self.assertEqual(
+                issubclass(model, ModelView),
+                issubclass(model, TestSecondMixin))
+
+    @with_transaction()
+    def test_no_mixin(self):
+        "Test any model are subclass of NotMixin"
+        for _, model in Pool().iterobject():
+            self.assertFalse(issubclass(model, NotMixin))
+
+
 def suite():
     func = unittest.TestLoader().loadTestsFromTestCase
     suite = unittest.TestSuite()
-    for testcase in (UrlTestCase,):
+    for testcase in [UrlTestCase, MixinTestCase]:
         suite.addTests(func(testcase))
     return suite
